Pull up following revision(s) (requested by sborrill in ticket #141): 	distrib/utils/libhack/getpwent.c: revision 1.10 Add cut-down getpwent_r() to join existing getpwent() and friends. This fixes PR 40003